salesforce-migration/force-app/main/default/objects/Bouquet_Audit_Log__c/Bouquet_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Bouquet Audit Log</label>
    <pluralLabel>Bouquet Audit Logs</pluralLabel>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>