salesforce-migration/force-app/main/default/objects/Bouquet_Audit_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Text</type>
    <length>255</length>
</CustomField>