salesforce-migration/force-app/main/default/objects/Bouquet_Audit_Log__c/fields/After_Data__c.field-meta.xml
<CustomField>
    <fullName>After_Data__c</fullName>
    <label>After Data</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>