salesforce-migration/force-app/main/default/objects/Bouquet_Audit_Log__c/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <label>Entity ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>