salesforce-migration/force-app/main/default/objects/Bouquet_Audit_Log__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>