salesforce-migration/force-app/main/default/objects/Bouquet_Audit_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bouquet_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>